decaf.output
语法

    0 $accept: Program $end

    1 Program: ClassDef
    2        | Program ClassDef

    3 VariableDef: Variable ';'

    4 Variable: Type T_IDENTIFIER

    5 Type: T_INT
    6     | T_DOUBLE
    7     | T_BOOL
    8     | T_STRING
    9     | T_VOID
   10     | T_CLASS T_IDENTIFIER
   11     | Type '[' ']'

   12 Formals: Variable
   13        | Formals ',' Variable
   14        | %empty

   15 FunctionDef: T_STATIC Type T_IDENTIFIER '(' Formals ')' StmtBlock
   16            | Type T_IDENTIFIER '(' Formals ')' StmtBlock

   17 ClassDef: T_CLASS T_IDENTIFIER T_EXTENDS T_IDENTIFIER '{' Fields '}'
   18         | T_CLASS T_IDENTIFIER T_EXTENDS T_IDENTIFIER '{' '}'
   19         | T_CLASS T_IDENTIFIER '{' Fields '}'
   20         | T_CLASS T_IDENTIFIER '{' '}'

   21 Fields: Field
   22       | Fields Field

   23 Field: FunctionDef
   24      | VariableDef

   25 StmtBlock: '{' Stmts '}'
   26          | '{' '}'

   27 Stmts: Stmt
   28      | Stmt Stmts

   29 Stmt: VariableDef
   30     | SimpleStmt ';'
   31     | IfStmt
   32     | WhileStmt
   33     | ForStmt
   34     | BreakStmt ';'
   35     | ReturnStmt ';'
   36     | PrintStmt ';'
   37     | StmtBlock

   38 SimpleStmt: LValue '=' Expr
   39           | Call
   40           | %empty

   41 LValue: Expr '.' T_IDENTIFIER
   42       | T_IDENTIFIER
   43       | Expr '[' Expr ']'

   44 Call: Expr '.' T_IDENTIFIER '(' Actuals ')'
   45     | T_IDENTIFIER '(' Actuals ')'

   46 Actuals: Expr
   47        | Actuals ',' Expr
   48        | %empty

   49 ForStmt: T_FOR '(' SimpleStmt ';' BoolExpr ';' SimpleStmt ')' Stmt

   50 WhileStmt: T_WHILE '(' BoolExpr ')' Stmt

   51 IfStmt: T_IF '(' BoolExpr ')' Stmt
   52       | T_IF '(' BoolExpr ')' Stmt T_ELSE Stmt

   53 ReturnStmt: T_RETURN
   54           | T_RETURN Expr

   55 BreakStmt: T_BREAK

   56 PrintStmt: T_PRINT '(' Exprs ')'

   57 Exprs: Expr
   58      | Exprs ',' Expr
   59      | %empty

   60 BoolExpr: Expr

   61 Expr: Constant
   62     | LValue
   63     | T_THIS
   64     | Call
   65     | '(' Expr ')'
   66     | Expr '+' Expr
   67     | Expr '-' Expr
   68     | Expr '*' Expr
   69     | Expr '/' Expr
   70     | Expr '%' Expr
   71     | '-' Expr
   72     | Expr '<' Expr
   73     | Expr T_LET Expr
   74     | Expr '>' Expr
   75     | Expr T_HET Expr
   76     | Expr T_EQU Expr
   77     | Expr T_UEQU Expr
   78     | Expr T_AND Expr
   79     | Expr T_OR Expr
   80     | '!' Expr
   81     | T_READINTEGER '(' ')'
   82     | T_READLINE '(' ')'
   83     | T_NEW T_IDENTIFIER '(' ')'
   84     | T_NEW Type '[' Expr ']'
   85     | T_INSTANCEOF '(' Expr ',' T_IDENTIFIER ')'
   86     | '(' T_CLASS T_IDENTIFIER ')' Expr

   87 Constant: T_INTCONSTANT
   88         | T_DOUBLECONSTANT
   89         | T_TRUE
   90         | T_FALSE
   91         | T_STRINGCONSTANT
   92         | T_NULL


Terminals, with rules where they appear

$end (0) 0
'!' (33) 80
'%' (37) 70
'(' (40) 15 16 44 45 49 50 51 52 56 65 81 82 83 85 86
')' (41) 15 16 44 45 49 50 51 52 56 65 81 82 83 85 86
'*' (42) 68
'+' (43) 66
',' (44) 13 47 58 85
'-' (45) 67 71
'.' (46) 41 44
'/' (47) 69
';' (59) 3 30 34 35 36 49
'<' (60) 72
'=' (61) 38
'>' (62) 74
'[' (91) 11 43 84
']' (93) 11 43 84
'{' (123) 17 18 19 20 25 26
'}' (125) 17 18 19 20 25 26
error (256)
T_BOOL (258) 7
T_INT (259) 5
T_DOUBLE (260) 6
T_STRING (261) 8
T_CLASS (262) 10 17 18 19 20 86
T_EXTENDS (263) 17 18
T_THIS (264) 63
T_NEW (265) 83 84
T_STATIC (266) 15
T_IDENTIFIER (267) 4 10 15 16 17 18 19 20 41 42 44 45 83 85 86
T_WHILE (268) 50
T_FOR (269) 49
T_IF (270) 51 52
T_ELSE (271) 52
T_RETURN (272) 53 54
T_BREAK (273) 55
T_VOID (274) 9
T_PRINT (275) 56
T_READINTEGER (276) 81
T_READLINE (277) 82
T_INSTANCEOF (278) 85
T_FALSE (279) 90
T_TRUE (280) 89
T_STRINGCONSTANT (281) 91
T_DOUBLECONSTANT (282) 88
T_INTCONSTANT (283) 87
T_NULL (284) 92
T_HET (285) 75
T_LET (286) 73
T_EQU (287) 76
T_UEQU (288) 77
T_AND (289) 78
T_OR (290) 79
T_IFX (291)


Nonterminals, with rules where they appear

$accept (55)
    左： 0
Program (56)
    左： 1 2, 右： 0 2
VariableDef (57)
    左： 3, 右： 24 29
Variable (58)
    左： 4, 右： 3 12 13
Type (59)
    左： 5 6 7 8 9 10 11, 右： 4 11 15 16 84
Formals (60)
    左： 12 13 14, 右： 13 15 16
FunctionDef (61)
    左： 15 16, 右： 23
ClassDef (62)
    左： 17 18 19 20, 右： 1 2
Fields (63)
    左： 21 22, 右： 17 19 22
Field (64)
    左： 23 24, 右： 21 22
StmtBlock (65)
    左： 25 26, 右： 15 16 37
Stmts (66)
    左： 27 28, 右： 25 28
Stmt (67)
    左： 29 30 31 32 33 34 35 36 37, 右： 27 28 49 50 51 52
SimpleStmt (68)
    左： 38 39 40, 右： 30 49
LValue (69)
    左： 41 42 43, 右： 38 62
Call (70)
    左： 44 45, 右： 39 64
Actuals (71)
    左： 46 47 48, 右： 44 45 47
ForStmt (72)
    左： 49, 右： 33
WhileStmt (73)
    左： 50, 右： 32
IfStmt (74)
    左： 51 52, 右： 31
ReturnStmt (75)
    左： 53 54, 右： 35
BreakStmt (76)
    左： 55, 右： 34
PrintStmt (77)
    左： 56, 右： 36
Exprs (78)
    左： 57 58 59, 右： 56 58
BoolExpr (79)
    左： 60, 右： 49 50 51 52
Expr (80)
    左： 61 62 63 64 65 66 67 68 69 70 71 72 73 74 75 76 77 78 79
    80 81 82 83 84 85 86, 右： 38 41 43 44 46 47 54 57 58 60 65 66
    67 68 69 70 71 72 73 74 75 76 77 78 79 80 84 85 86
Constant (81)
    左： 87 88 89 90 91 92, 右： 61


State 0

    0 $accept: . Program $end

    T_CLASS  shift, and go to state 1

    Program   转到状态 2
    ClassDef  转到状态 3


State 1

   17 ClassDef: T_CLASS . T_IDENTIFIER T_EXTENDS T_IDENTIFIER '{' Fields '}'
   18         | T_CLASS . T_IDENTIFIER T_EXTENDS T_IDENTIFIER '{' '}'
   19         | T_CLASS . T_IDENTIFIER '{' Fields '}'
   20         | T_CLASS . T_IDENTIFIER '{' '}'

    T_IDENTIFIER  shift, and go to state 4


State 2

    0 $accept: Program . $end
    2 Program: Program . ClassDef

    $end     shift, and go to state 5
    T_CLASS  shift, and go to state 1

    ClassDef  转到状态 6


State 3

    1 Program: ClassDef .

    $default  reduce using rule 1 (Program)


State 4

   17 ClassDef: T_CLASS T_IDENTIFIER . T_EXTENDS T_IDENTIFIER '{' Fields '}'
   18         | T_CLASS T_IDENTIFIER . T_EXTENDS T_IDENTIFIER '{' '}'
   19         | T_CLASS T_IDENTIFIER . '{' Fields '}'
   20         | T_CLASS T_IDENTIFIER . '{' '}'

    T_EXTENDS  shift, and go to state 7
    '{'        shift, and go to state 8


State 5

    0 $accept: Program $end .

    $default  接受


State 6

    2 Program: Program ClassDef .

    $default  reduce using rule 2 (Program)


State 7

   17 ClassDef: T_CLASS T_IDENTIFIER T_EXTENDS . T_IDENTIFIER '{' Fields '}'
   18         | T_CLASS T_IDENTIFIER T_EXTENDS . T_IDENTIFIER '{' '}'

    T_IDENTIFIER  shift, and go to state 9


State 8

   19 ClassDef: T_CLASS T_IDENTIFIER '{' . Fields '}'
   20         | T_CLASS T_IDENTIFIER '{' . '}'

    T_BOOL    shift, and go to state 10
    T_INT     shift, and go to state 11
    T_DOUBLE  shift, and go to state 12
    T_STRING  shift, and go to state 13
    T_CLASS   shift, and go to state 14
    T_STATIC  shift, and go to state 15
    T_VOID    shift, and go to state 16
    '}'       shift, and go to state 17

    VariableDef  转到状态 18
    Variable     转到状态 19
    Type         转到状态 20
    FunctionDef  转到状态 21
    Fields       转到状态 22
    Field        转到状态 23


State 9

   17 ClassDef: T_CLASS T_IDENTIFIER T_EXTENDS T_IDENTIFIER . '{' Fields '}'
   18         | T_CLASS T_IDENTIFIER T_EXTENDS T_IDENTIFIER . '{' '}'

    '{'  shift, and go to state 24


State 10

    7 Type: T_BOOL .

    $default  reduce using rule 7 (Type)


State 11

    5 Type: T_INT .

    $default  reduce using rule 5 (Type)


State 12

    6 Type: T_DOUBLE .

    $default  reduce using rule 6 (Type)


State 13

    8 Type: T_STRING .

    $default  reduce using rule 8 (Type)


State 14

   10 Type: T_CLASS . T_IDENTIFIER

    T_IDENTIFIER  shift, and go to state 25


State 15

   15 FunctionDef: T_STATIC . Type T_IDENTIFIER '(' Formals ')' StmtBlock

    T_BOOL    shift, and go to state 10
    T_INT     shift, and go to state 11
    T_DOUBLE  shift, and go to state 12
    T_STRING  shift, and go to state 13
    T_CLASS   shift, and go to state 14
    T_VOID    shift, and go to state 16

    Type  转到状态 26


State 16

    9 Type: T_VOID .

    $default  reduce using rule 9 (Type)


State 17

   20 ClassDef: T_CLASS T_IDENTIFIER '{' '}' .

    $default  reduce using rule 20 (ClassDef)


State 18

   24 Field: VariableDef .

    $default  reduce using rule 24 (Field)


State 19

    3 VariableDef: Variable . ';'

    ';'  shift, and go to state 27


State 20

    4 Variable: Type . T_IDENTIFIER
   11 Type: Type . '[' ']'
   16 FunctionDef: Type . T_IDENTIFIER '(' Formals ')' StmtBlock

    T_IDENTIFIER  shift, and go to state 28
    '['           shift, and go to state 29


State 21

   23 Field: FunctionDef .

    $default  reduce using rule 23 (Field)


State 22

   19 ClassDef: T_CLASS T_IDENTIFIER '{' Fields . '}'
   22 Fields: Fields . Field

    T_BOOL    shift, and go to state 10
    T_INT     shift, and go to state 11
    T_DOUBLE  shift, and go to state 12
    T_STRING  shift, and go to state 13
    T_CLASS   shift, and go to state 14
    T_STATIC  shift, and go to state 15
    T_VOID    shift, and go to state 16
    '}'       shift, and go to state 30

    VariableDef  转到状态 18
    Variable     转到状态 19
    Type         转到状态 20
    FunctionDef  转到状态 21
    Field        转到状态 31


State 23

   21 Fields: Field .

    $default  reduce using rule 21 (Fields)


State 24

   17 ClassDef: T_CLASS T_IDENTIFIER T_EXTENDS T_IDENTIFIER '{' . Fields '}'
   18         | T_CLASS T_IDENTIFIER T_EXTENDS T_IDENTIFIER '{' . '}'

    T_BOOL    shift, and go to state 10
    T_INT     shift, and go to state 11
    T_DOUBLE  shift, and go to state 12
    T_STRING  shift, and go to state 13
    T_CLASS   shift, and go to state 14
    T_STATIC  shift, and go to state 15
    T_VOID    shift, and go to state 16
    '}'       shift, and go to state 32

    VariableDef  转到状态 18
    Variable     转到状态 19
    Type         转到状态 20
    FunctionDef  转到状态 21
    Fields       转到状态 33
    Field        转到状态 23


State 25

   10 Type: T_CLASS T_IDENTIFIER .

    $default  reduce using rule 10 (Type)


State 26

   11 Type: Type . '[' ']'
   15 FunctionDef: T_STATIC Type . T_IDENTIFIER '(' Formals ')' StmtBlock

    T_IDENTIFIER  shift, and go to state 34
    '['           shift, and go to state 29


State 27

    3 VariableDef: Variable ';' .

    $default  reduce using rule 3 (VariableDef)


State 28

    4 Variable: Type T_IDENTIFIER .
   16 FunctionDef: Type T_IDENTIFIER . '(' Formals ')' StmtBlock

    '('  shift, and go to state 35

    $default  reduce using rule 4 (Variable)


State 29

   11 Type: Type '[' . ']'

    ']'  shift, and go to state 36


State 30

   19 ClassDef: T_CLASS T_IDENTIFIER '{' Fields '}' .

    $default  reduce using rule 19 (ClassDef)


State 31

   22 Fields: Fields Field .

    $default  reduce using rule 22 (Fields)


State 32

   18 ClassDef: T_CLASS T_IDENTIFIER T_EXTENDS T_IDENTIFIER '{' '}' .

    $default  reduce using rule 18 (ClassDef)


State 33

   17 ClassDef: T_CLASS T_IDENTIFIER T_EXTENDS T_IDENTIFIER '{' Fields . '}'
   22 Fields: Fields . Field

    T_BOOL    shift, and go to state 10
    T_INT     shift, and go to state 11
    T_DOUBLE  shift, and go to state 12
    T_STRING  shift, and go to state 13
    T_CLASS   shift, and go to state 14
    T_STATIC  shift, and go to state 15
    T_VOID    shift, and go to state 16
    '}'       shift, and go to state 37

    VariableDef  转到状态 18
    Variable     转到状态 19
    Type         转到状态 20
    FunctionDef  转到状态 21
    Field        转到状态 31


State 34

   15 FunctionDef: T_STATIC Type T_IDENTIFIER . '(' Formals ')' StmtBlock

    '('  shift, and go to state 38


State 35

   16 FunctionDef: Type T_IDENTIFIER '(' . Formals ')' StmtBlock

    T_BOOL    shift, and go to state 10
    T_INT     shift, and go to state 11
    T_DOUBLE  shift, and go to state 12
    T_STRING  shift, and go to state 13
    T_CLASS   shift, and go to state 14
    T_VOID    shift, and go to state 16

    $default  reduce using rule 14 (Formals)

    Variable  转到状态 39
    Type      转到状态 40
    Formals   转到状态 41


State 36

   11 Type: Type '[' ']' .

    $default  reduce using rule 11 (Type)


State 37

   17 ClassDef: T_CLASS T_IDENTIFIER T_EXTENDS T_IDENTIFIER '{' Fields '}' .

    $default  reduce using rule 17 (ClassDef)


State 38

   15 FunctionDef: T_STATIC Type T_IDENTIFIER '(' . Formals ')' StmtBlock

    T_BOOL    shift, and go to state 10
    T_INT     shift, and go to state 11
    T_DOUBLE  shift, and go to state 12
    T_STRING  shift, and go to state 13
    T_CLASS   shift, and go to state 14
    T_VOID    shift, and go to state 16

    $default  reduce using rule 14 (Formals)

    Variable  转到状态 39
    Type      转到状态 40
    Formals   转到状态 42


State 39

   12 Formals: Variable .

    $default  reduce using rule 12 (Formals)


State 40

    4 Variable: Type . T_IDENTIFIER
   11 Type: Type . '[' ']'

    T_IDENTIFIER  shift, and go to state 43
    '['           shift, and go to state 29


State 41

   13 Formals: Formals . ',' Variable
   16 FunctionDef: Type T_IDENTIFIER '(' Formals . ')' StmtBlock

    ')'  shift, and go to state 44
    ','  shift, and go to state 45


State 42

   13 Formals: Formals . ',' Variable
   15 FunctionDef: T_STATIC Type T_IDENTIFIER '(' Formals . ')' StmtBlock

    ')'  shift, and go to state 46
    ','  shift, and go to state 45


State 43

    4 Variable: Type T_IDENTIFIER .

    $default  reduce using rule 4 (Variable)


State 44

   16 FunctionDef: Type T_IDENTIFIER '(' Formals ')' . StmtBlock

    '{'  shift, and go to state 47

    StmtBlock  转到状态 48


State 45

   13 Formals: Formals ',' . Variable

    T_BOOL    shift, and go to state 10
    T_INT     shift, and go to state 11
    T_DOUBLE  shift, and go to state 12
    T_STRING  shift, and go to state 13
    T_CLASS   shift, and go to state 14
    T_VOID    shift, and go to state 16

    Variable  转到状态 49
    Type      转到状态 40


State 46

   15 FunctionDef: T_STATIC Type T_IDENTIFIER '(' Formals ')' . StmtBlock

    '{'  shift, and go to state 47

    StmtBlock  转到状态 50


State 47

   25 StmtBlock: '{' . Stmts '}'
   26          | '{' . '}'

    T_BOOL            shift, and go to state 10
    T_INT             shift, and go to state 11
    T_DOUBLE          shift, and go to state 12
    T_STRING          shift, and go to state 13
    T_CLASS           shift, and go to state 14
    T_THIS            shift, and go to state 51
    T_NEW             shift, and go to state 52
    T_IDENTIFIER      shift, and go to state 53
    T_WHILE           shift, and go to state 54
    T_FOR             shift, and go to state 55
    T_IF              shift, and go to state 56
    T_RETURN          shift, and go to state 57
    T_BREAK           shift, and go to state 58
    T_VOID            shift, and go to state 16
    T_PRINT           shift, and go to state 59
    T_READINTEGER     shift, and go to state 60
    T_READLINE        shift, and go to state 61
    T_INSTANCEOF      shift, and go to state 62
    T_FALSE           shift, and go to state 63
    T_TRUE            shift, and go to state 64
    T_STRINGCONSTANT  shift, and go to state 65
    T_DOUBLECONSTANT  shift, and go to state 66
    T_INTCONSTANT     shift, and go to state 67
    T_NULL            shift, and go to state 68
    '-'               shift, and go to state 69
    '!'               shift, and go to state 70
    '('               shift, and go to state 71
    '{'               shift, and go to state 47
    '}'               shift, and go to state 72

    $default  reduce using rule 40 (SimpleStmt)

    VariableDef  转到状态 73
    Variable     转到状态 19
    Type         转到状态 40
    StmtBlock    转到状态 74
    Stmts        转到状态 75
    Stmt         转到状态 76
    SimpleStmt   转到状态 77
    LValue       转到状态 78
    Call         转到状态 79
    ForStmt      转到状态 80
    WhileStmt    转到状态 81
    IfStmt       转到状态 82
    ReturnStmt   转到状态 83
    BreakStmt    转到状态 84
    PrintStmt    转到状态 85
    Expr         转到状态 86
    Constant     转到状态 87


State 48

   16 FunctionDef: Type T_IDENTIFIER '(' Formals ')' StmtBlock .

    $default  reduce using rule 16 (FunctionDef)


State 49

   13 Formals: Formals ',' Variable .

    $default  reduce using rule 13 (Formals)


State 50

   15 FunctionDef: T_STATIC Type T_IDENTIFIER '(' Formals ')' StmtBlock .

    $default  reduce using rule 15 (FunctionDef)


State 51

   63 Expr: T_THIS .

    $default  reduce using rule 63 (Expr)


State 52

   83 Expr: T_NEW . T_IDENTIFIER '(' ')'
   84     | T_NEW . Type '[' Expr ']'

    T_BOOL        shift, and go to state 10
    T_INT         shift, and go to state 11
    T_DOUBLE      shift, and go to state 12
    T_STRING      shift, and go to state 13
    T_CLASS       shift, and go to state 14
    T_IDENTIFIER  shift, and go to state 88
    T_VOID        shift, and go to state 16

    Type  转到状态 89


State 53

   42 LValue: T_IDENTIFIER .
   45 Call: T_IDENTIFIER . '(' Actuals ')'

    '('  shift, and go to state 90

    $default  reduce using rule 42 (LValue)


State 54

   50 WhileStmt: T_WHILE . '(' BoolExpr ')' Stmt

    '('  shift, and go to state 91


State 55

   49 ForStmt: T_FOR . '(' SimpleStmt ';' BoolExpr ';' SimpleStmt ')' Stmt

    '('  shift, and go to state 92


State 56

   51 IfStmt: T_IF . '(' BoolExpr ')' Stmt
   52       | T_IF . '(' BoolExpr ')' Stmt T_ELSE Stmt

    '('  shift, and go to state 93


State 57

   53 ReturnStmt: T_RETURN .
   54           | T_RETURN . Expr

    T_THIS            shift, and go to state 51
    T_NEW             shift, and go to state 52
    T_IDENTIFIER      shift, and go to state 53
    T_READINTEGER     shift, and go to state 60
    T_READLINE        shift, and go to state 61
    T_INSTANCEOF      shift, and go to state 62
    T_FALSE           shift, and go to state 63
    T_TRUE            shift, and go to state 64
    T_STRINGCONSTANT  shift, and go to state 65
    T_DOUBLECONSTANT  shift, and go to state 66
    T_INTCONSTANT     shift, and go to state 67
    T_NULL            shift, and go to state 68
    '-'               shift, and go to state 69
    '!'               shift, and go to state 70
    '('               shift, and go to state 71

    $default  reduce using rule 53 (ReturnStmt)

    LValue    转到状态 94
    Call      转到状态 95
    Expr      转到状态 96
    Constant  转到状态 87


State 58

   55 BreakStmt: T_BREAK .

    $default  reduce using rule 55 (BreakStmt)


State 59

   56 PrintStmt: T_PRINT . '(' Exprs ')'

    '('  shift, and go to state 97


State 60

   81 Expr: T_READINTEGER . '(' ')'

    '('  shift, and go to state 98


State 61

   82 Expr: T_READLINE . '(' ')'

    '('  shift, and go to state 99


State 62

   85 Expr: T_INSTANCEOF . '(' Expr ',' T_IDENTIFIER ')'

    '('  shift, and go to state 100


State 63

   90 Constant: T_FALSE .

    $default  reduce using rule 90 (Constant)


State 64

   89 Constant: T_TRUE .

    $default  reduce using rule 89 (Constant)


State 65

   91 Constant: T_STRINGCONSTANT .

    $default  reduce using rule 91 (Constant)


State 66

   88 Constant: T_DOUBLECONSTANT .

    $default  reduce using rule 88 (Constant)


State 67

   87 Constant: T_INTCONSTANT .

    $default  reduce using rule 87 (Constant)


State 68

   92 Constant: T_NULL .

    $default  reduce using rule 92 (Constant)


State 69

   71 Expr: '-' . Expr

    T_THIS            shift, and go to state 51
    T_NEW             shift, and go to state 52
    T_IDENTIFIER      shift, and go to state 53
    T_READINTEGER     shift, and go to state 60
    T_READLINE        shift, and go to state 61
    T_INSTANCEOF      shift, and go to state 62
    T_FALSE           shift, and go to state 63
    T_TRUE            shift, and go to state 64
    T_STRINGCONSTANT  shift, and go to state 65
    T_DOUBLECONSTANT  shift, and go to state 66
    T_INTCONSTANT     shift, and go to state 67
    T_NULL            shift, and go to state 68
    '-'               shift, and go to state 69
    '!'               shift, and go to state 70
    '('               shift, and go to state 71

    LValue    转到状态 94
    Call      转到状态 95
    Expr      转到状态 101
    Constant  转到状态 87


State 70

   80 Expr: '!' . Expr

    T_THIS            shift, and go to state 51
    T_NEW             shift, and go to state 52
    T_IDENTIFIER      shift, and go to state 53
    T_READINTEGER     shift, and go to state 60
    T_READLINE        shift, and go to state 61
    T_INSTANCEOF      shift, and go to state 62
    T_FALSE           shift, and go to state 63
    T_TRUE            shift, and go to state 64
    T_STRINGCONSTANT  shift, and go to state 65
    T_DOUBLECONSTANT  shift, and go to state 66
    T_INTCONSTANT     shift, and go to state 67
    T_NULL            shift, and go to state 68
    '-'               shift, and go to state 69
    '!'               shift, and go to state 70
    '('               shift, and go to state 71

    LValue    转到状态 94
    Call      转到状态 95
    Expr      转到状态 102
    Constant  转到状态 87


State 71

   65 Expr: '(' . Expr ')'
   86     | '(' . T_CLASS T_IDENTIFIER ')' Expr

    T_CLASS           shift, and go to state 103
    T_THIS            shift, and go to state 51
    T_NEW             shift, and go to state 52
    T_IDENTIFIER      shift, and go to state 53
    T_READINTEGER     shift, and go to state 60
    T_READLINE        shift, and go to state 61
    T_INSTANCEOF      shift, and go to state 62
    T_FALSE           shift, and go to state 63
    T_TRUE            shift, and go to state 64
    T_STRINGCONSTANT  shift, and go to state 65
    T_DOUBLECONSTANT  shift, and go to state 66
    T_INTCONSTANT     shift, and go to state 67
    T_NULL            shift, and go to state 68
    '-'               shift, and go to state 69
    '!'               shift, and go to state 70
    '('               shift, and go to state 71

    LValue    转到状态 94
    Call      转到状态 95
    Expr      转到状态 104
    Constant  转到状态 87


State 72

   26 StmtBlock: '{' '}' .

    $default  reduce using rule 26 (StmtBlock)


State 73

   29 Stmt: VariableDef .

    $default  reduce using rule 29 (Stmt)


State 74

   37 Stmt: StmtBlock .

    $default  reduce using rule 37 (Stmt)


State 75

   25 StmtBlock: '{' Stmts . '}'

    '}'  shift, and go to state 105


State 76

   27 Stmts: Stmt .
   28      | Stmt . Stmts
